--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -8,7 +8,7 @@
     <h1>I am the solution to HW1!</h1>
 
     <p>
-        And I can link to <a href="./otherpage.html">other pages.</a>
+        Click here to go to <a href="gallery.html">bun bun bake shop pages.</a>
     </p>
 
   </body>
