--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -7,9 +7,18 @@
 
     <h1>I am the solution to HW1!</h1>
 
-    <p>
-        Click here to go to <a href="gallery.html">bun bun bake shop pages.</a>
-    </p>
+    <div>
+      <a href="gallery.html">Gallery Page</a>
+    </div>
+
+    <div>
+      <a href="detail.html">Product Detail Page</a>
+    </div>
+    
+    <div>
+      <a href="cart.html">Shopping Cart Page</a>
+    </div>
+    
 
   </body>
 </html>
