--- a/solution-hw2/index.html
+++ b/solution-hw2/index.html
@@ -7,5 +7,17 @@
 
     <h1>I am the solution to HW2!</h1>
 
+    <div>
+      <a href="gallery.html">Gallery Page</a>
+    </div>
+
+    <div>
+      <a href="detail.html">Product Detail Page</a>
+    </div>
+    
+    <div>
+      <a href="cart.html">Shopping Cart Page</a>
+    </div>
+
   </body>
 </html>
