--- a/solution-hw2/detail.html
+++ b/solution-hw2/detail.html
@@ -10,8 +10,7 @@
         <!--logo-->
         <div class="header-logo">
             <a href="gallery.html">
-                <img  src="assets/logo-01.svg" 
-                    alt="Logo of Bun Bun Bake Shop">
+                <img  src="assets/logo-01.svg" alt="Logo of Bun Bun Bake Shop">
             </a>
         </div>
         <!--content-->
